# art-gal-api

./: Dockerfile  README.md  docker-compose.yml  genres.json  main.py  pyproject.toml  url_scraper.py
app/: genres.json  image_data_fetcher.py  main.py  url_scraper.py
